# Options-Flow

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py  scheduler.py
backend/app/core/: config.py  database.py  logging_setup.py
backend/app/events/: __init__.py  service.py
backend/app/intelligence/: flow_story.py  patterns.py  ranking.py  schemas.py
backend/app/jobs/: events_job.py  ingestion_job.py  signal_job.py
backend/app/models/: models.py
backend/app/providers/: base.py  credentials.py  ibkr_delayed.py  mock.py  polygon.py  registry.py
backend/app/routers/: alerts.py  diagnostics.py  events.py  health.py  intelligence.py  jobs.py  metrics.py  runs.py  snapshots.py  universe.py
backend/app/schemas/: schemas.py
backend/app/services/: dedupe.py  diagnostics.py  earnings_sync.py  events.py  ingestion.py  signal.py  universe.py
backend/app/signals/: models.py  resolver.py  router.py  schemas.py  service.py
backend/app/tenants/: models.py  router.py  schemas.py  service.py
backend/data/: earnings_seed.json
backend/docs/intelligence/: README.md
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_multi_tenant.py  003_provider_hardening.py  004_ingestion_run_observability.py  005_signal_observability.py  006_signal_settings.py  007_intelligence_layer.py  008_alert_deduplication.py  009_event_catalysts.py
backend/scripts/: check_events.py  compare_runs.py  seed_events.py  validate_provider.py
demo/: Dockerfile  (+1 more)
(+39 files in other folders)
