[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "options-flow-radar-backend"
version = "0.1.0"
description = "Options Flow Radar — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "apscheduler>=3.10.4",
    "numpy>=1.26.4",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "psycopg2-binary>=2.9.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools]
package-dir = {"" = "."}
